# mtklogorepacker

./: Android.mk  Application.mk  CMakeLists.txt  build.bat  build.sh
src/: images.cpp  main.cpp  main.h  pack.cpp  unpack.cpp  utils.cpp
zlib/: gzguts.h
